--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,8 @@
 <h2 class="page-header"> Account Login </h2>
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+
+
 <form method="POST" action="/users/login">
     <div class="form-group">
         <label> Username </label>
