--- a/assets/css/user-data/graphs-style.css
+++ b/assets/css/user-data/graphs-style.css
@@ -5,3 +5,41 @@
 .row {
     padding: 100px;
 }
+
+.svg {
+    display: block;
+    margin: 0 auto;
+    position: absolute;
+      top: calc(50% - 24px);
+      left: calc(50% - 24px);
+}
+
+.col-md-12 {
+  height: 150px;
+  width: 150px;
+  position: relative;
+  border-radius: 50%;
+  border: 20px solid brown;
+  background: black;
+}
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 960px;
+  height: 500px;
+  position: relative;
+}
+path.slice{
+    stroke-width:2px;
+}
+polyline{
+    opacity: .3;
+    stroke: black;
+    stroke-width: 2px;
+    fill: none;
+} 
+svg text.percent{
+    fill:white;
+    text-anchor:middle;
+    font-size:12px;
+}
