--- a/views/graphs.handlebars
+++ b/views/graphs.handlebars
@@ -4,20 +4,50 @@
 	<meta charset = "UTF-8">
 	<title>Make Cents - Graphs</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/graphs-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/user-data/graphs-style.css">
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="assets/javascript/user-data/graph3d.js"></script>
 </head>
 <body>
 	<div class="container">
-	  <div class="col-md-6">
-        <div class="text-center col-md-12 well">
+        <div class="col-md-6">
+            <div class="text-center col-md-12" id="salesWell">
             Graph1
+            </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="text-center col-md-12 well">
+        <div class="col-md-6">
+            <div class="text-center col-md-12" id="quotesWell">
             Graph 2
-        </div>
-    </div> 
-	</div>
+            </div>
+        </div> 
+    </div>    
+    <script>
+    var salesData=[
+        {label:"Basic", color:"#3366CC"},
+        {label:"Plus", color:"#DC3912"},
+        {label:"Lite", color:"#FF9900"},
+        {label:"Elite", color:"#109618"},
+        {label:"Delux", color:"#990099"}
+    ];
+
+    var salesDonutSvgContainer = d3.select("#salesWell").append("svg").attr("width",350).attr("height",300);
+    var quotesDonutSvgContainer = d3.select("#quotesWell").append("svg").attr("width",350).attr("height",300);
+
+    salesDonutSvgContainer.append("g").attr("id","salesDonut");
+    quotesDonutSvgContainer.append("g").attr("id","quotesDonut");
+
+    Donut3D.draw("salesDonut", randomData(), 150, 150, 130, 100, 30, 0.4);
+    Donut3D.draw("quotesDonut", randomData(), 150, 150, 130, 100, 30, 0);
+        
+    function changeData(){
+        Donut3D.transition("salesDonut", randomData(), 130, 100, 30, 0.4);
+        Donut3D.transition("quotesDonut", randomData(), 130, 100, 30, 0);
+    }
+
+    function randomData(){
+        return salesData.map(function(d){ 
+            return {label:d.label, value:1000*Math.random(), color:d.color};});
+    }
+    </script>
 </body>
 </html>
